--- a/src/components/BgContainer/BgContainer.scss
+++ b/src/components/BgContainer/BgContainer.scss
@@ -1,25 +1,27 @@
-.bg_container {
+@import "../../variables.scss";
+
+.bg {
   width: 50vw;
   height: 100vh;
-  background: #f7f7f7;
+  background: $bg;
   padding: 6vw 2vw 0vw;
 
-  .img_container {
+  .img__container {
     img {
       width: 90%;
     }
   }
 
-  .text_container {
+  .text__container {
     text-align: center;
     h3 {
       margin: 30px 0 10px;
-      color: darkslategray;
+      color: $heading;
     }
     p {
       width: 50%;
       margin: 0 auto;
-      color: lightslategray;
+      color: $fg;
     }
   }
 }
