--- a/src/components/FormContainer/FormContainer.scss
+++ b/src/components/FormContainer/FormContainer.scss
@@ -1,30 +1,89 @@
-.form_container {
+@import "../../variables.scss";
+
+.form__container {
   width: 50vw;
   height: 100vh;
   padding: 2% 5.5%;
-  color: lightslategray;
+  color: $fg;
   font-weight: 500;
   background: white;
 
-  form {
-    .create_account_btn {
-      display: block;
-      color: white;
-      background: #03b3ff;
-      border: none;
-      padding: 12px 10px;
-      width: 33%;
-      border-radius: 3px;
-      margin-top: 20px;
-      font-weight: 500;
-    }
+  .createAccount__btn {
+    display: block;
+    background-color: #03b3ff;
+    border: none;
+    padding: 12px 10px;
+    width: 33%;
+    border-radius: 3px;
+    margin-top: 20px;
+    font-weight: 500;
+    color: white;
+    cursor: pointer;
   }
 }
 
-.form_heading {
+.btn__link {
+  text-decoration: none;
+  color: white;
+  cursor: pointer;
+}
+
+.form__heading {
   h1 {
-    color: darkslategray;
+    color: $heading;
     font-weight: 700;
     margin-bottom: 25px;
   }
+}
+
+input[type="checkbox"] {
+  display: inline;
+  width: auto;
+  visibility: hidden;
+  margin: 0;
+  padding: 0;
+}
+
+[type="checkbox"] + label {
+  position: relative;
+  padding-left: 30px;
+  cursor: pointer;
+  display: inline-block;
+  color: $fg;
+}
+
+[type="checkbox"] + label::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 3px;
+  width: 16px;
+  height: 16px;
+  outline: 1px solid #aaa;
+  background: #fff;
+  border-radius: 3px;
+}
+
+[type="checkbox"]:checked + label::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 3px;
+  width: 16px;
+  height: 16px;
+  outline: 2px solid #03b3ff;
+  background: #fff;
+  border-radius: 3px;
+}
+
+[type="checkbox"]:checked + label::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 3px;
+  width: 12px;
+  height: 12px;
+  margin: 2px;
+  background-image: url(../../images/check.png);
+  background-size: contain;
 }
